# karen

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  basic_config.json  build.sh  build_pypi.sh  mkdocs.yml  requirements.txt  run.py  setup.cfg  train_faces.py
data/faces/: .gitignore
docs/: config.example.md  config.example.video.md  config.overview.md  index.md  installation.audio.md  installation.basic.md  installation.raspberrypi.md  karen.brain.md  karen.device.md  karen.devices.md  karen.handlers.md  karen.listener.md  karen.md  karen.shared.md  karen.skill.md  karen.skillmanager.md  karen.skills.helloskill.md  karen.skills.knockknockskill.md  karen.skills.telldatetimeskill.md  karen.speaker.md  karen.watcher.md  karen.watcher.train.md  requirements.txt
karen/: __init__.py  brain.py  device.py  handlers.py  listener.py  shared.py  skillmanager.py  speaker.py  watcher.py
karen/data/: basic_config_video.json
karen/skills/HelloSkill/: __init__.py
karen/skills/KnockKnockSkill/: __init__.py
karen/skills/TellDateTimeSkill/: __init__.py
karen/web/: index.html
models/speech/: .gitignore  download-models.sh
models/watcher/: .gitignore
src/: karen.py  kconfig.py  kill.sh  run.sh  start.sh  startup.py
src/Karen/: KBrain.py  KHTTP.py  KListener.py  KShared.py  KSkillManager.py  KSpeaker.py  KVersion.py  KWatcher.py  __init__.py
src/karen/: __init__.py  shared.py  templates.py
src/karen/data/: basic_config_video.json
src/klib/KDaemon/: __init__.py
tests/: test_listener.py
webgui/: .project  index.html
(+16 files in other folders)
