[metadata]
name = karen
author = lnxusr1
author_email = dist@projectkaren.ai
url = https://github.com/lnxusr1/karen
download_url = https://github.com/lnxusr1/karen/releases/latest
version = attr: karen.VERSION
description = Project Karen
long-description = file: README.rst
keywords = Artificial Intelligence, AI, Personal Assistant
license = MIT
home-page = https://projectkaren.ai
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Bug Tracker = https://github.com/lnxusr1/karen/issues
    Changelog = https://github.com/lnxusr1/karen/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.6
zip_safe = false
include_package_data = true
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    numpy
    deepspeech
    webrtcvad
    pyaudio
    urllib3
    requests
    padatious
#    {install_requires}
#tests_require =
#    {tests_require}
#package_dir=
#    =src
#packages=find:

#[options.packages.find]
#where=src